[workspace]
resolver = "2"
members = [
    "lore",
    "lore-aws",
    "lore-base",
    "lore-chaos-client",
    "lore-client",
    "lore-credential",
    "lore-error-set",
    "lore-error-set-macro",
    "lore-hashicorp",
    "lore-integration-tests",
    "lore-macro",
    "lore-notification",
    "lore-proto",
    "lore-revision",
    "lore-server",
    "lore-storage",
    "lore-telemetry",
    "lore-transport",
]

[workspace.package]
version = "0.8.5-nightly"

[workspace.dependencies]
lore = { path = "lore" }
lore-aws = { path = "lore-aws" }
lore-base = { path = "lore-base" }
lore-credential = { path = "lore-credential" }
lore-error-set = { path = "lore-error-set" }
lore-error-set-macro = { path = "lore-error-set-macro" }
lore-hashicorp = { path = "lore-hashicorp" }
lore-integration-tests = { path = "lore-integration-tests" }
lore-macro = { path = "lore-macro" }
lore-notification = { path = "lore-notification" }
lore-proto = { path = "lore-proto" }
lore-revision = { path = "lore-revision" }
lore-server = { path = "lore-server" }
lore-storage = { path = "lore-storage" }
lore-telemetry = { path = "lore-telemetry" }
lore-transport = { path = "lore-transport" }
anstyle = "1.0.11"
anstream = "0.6.20"
anyhow = "1.0.99"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = "0.8.4"
base64 = "0.22.1"
bitcode = { version = "0.6.9", features = ["serde"] }
bitflags = "2.9.4"
blake3 = "1.8.2"
bytes = { version = "1.11.1", features = ["serde"] }
chrono = { version = "0.4.42", default-features = false, features = ["alloc", "clock"] }
clap = { version = "4.5.47", features = ["derive", "string", "unicode"] }
clap-markdown = "0.1.5"
config = { version = "0.15.15", features = ["toml"], default-features = false }
ctor = "0.2"
crossbeam = "0.8.4"
dashmap = "6.1.0"
diffy = "0.4.2"
directories = "6.0.0"
enum_dispatch = "0.3.13"
tracing-appender = "0.2.3"
tracing-ecs = "0.4.1"
tracing-opentelemetry = "0.32.0"
fastcdc = "3.2.1"
futures = "0.3.31"
glob-match = "0.2.1"
governor = "0.10.1"
hex = "0.4.3"
http = "1.3.1"
indexmap = "2.11.1"
infer = "0.19.0"
jsonwebtoken = "9.3.1"
keyring = { version = "3.6.3", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
libc = "0.2.175"
lz4-sys = "1.11"
zstd-sys = { version = "2.0", default-features = false, features = ["experimental"] }
memmap2 = "0.9.8"
mockall = "0.13.1"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "tls", "tls-roots"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
parking_lot = { version = "0.12.4", features = ["arc_lock"] }
pin-project = "1.1.10"
proc-macro2 = "1"
prost = "0.14.1"
prost-types = "0.14.1"
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-ring", "bloom"] }
quinn-proto = { version = "=0.11.13", default-features = false }
quote = "1.0.40"
rand = "0.9.2"
rayon = "1.10.0"
regex = "1"
rcgen = "0.14.4"
# This is the default feature set, just swpping in rustls-tls for default-tls.
reqwest = { version = "0.12.23", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
] }
ring = "0.17.14"
# We configure rustls to not bring in aws-lc-sys, which seems to have build issues on Windows.
rustls = { version = "0.23.31", default-features = false, features = [
    "std",
    "logging",
    "ring",
] }
rustls-pki-types = "1.13.1"
rustls-native-certs = "0.8.2"
smallvec = "1.15.1"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = { version = "1.0.143", default-features = false }
serde_with = { version = "3.14.0", default-features = false, features = ["alloc", "macros"] }
serial_test = { version = "3.2.0" }
socket2 = "0.6.0"
syn = "2.0.106"
sysinfo = "0.37.0"
temp-env = "0.3.6"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-metrics = { version = "0.4.5", default-features = false, features = ["rt"] }
tokio-stream = { version = "0.1.17", default-features = false, features = ["sync"] }
tokio-util = { version = "0.7.16", default-features = false, features = ["rt"] }
toml = "0.9.5"
trybuild = "1"
tonic = { version = "0.14.2", default-features = false, features = ["codegen", "router", "server", "tls-native-roots"] }
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.11", default-features = false }
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-test = "0.2.5"
url = "2.5.7"
urlencoding = "2.1.3"
uuid = { version = "1.18.1", default-features = false, features = ["v4", "v7"] }
vergen = { version = "9.0.6", default-features = false, features = ["cargo", "rustc", "build", "si"] }
windows-sys = "0.61.0"
x509-parser = "0.18.0"
xxhash-rust = { version = "0.8.15", default-features = false, features = ["xxh3"] }
zerocopy = { version = "0.8.26", features = [
    "derive",
    "alloc",
    "simd",
] }

# Note: we currently control debug symbol splitting in .cargo/config.toml

# Fast build suitable for local development
[profile.release]
debug = "line-tables-only"
incremental = true
debug-assertions = true
panic = "abort"

# The actual release build
[profile.release-lto]
inherits = "release"
incremental = false
opt-level = 3
debug = 2
lto = "fat"
codegen-units = 4
debug-assertions = false

# Package overrides. Use this if you want to generate debug info or de-optimise a specific package
#[profile.release.package.lore-revision]
#debug = 2
#opt-level = 0

# Quinn sometimes debug asserts on something, silence it for now until we can investigate
[profile.release.package.quinn]
debug-assertions = false

[patch.crates-io]
quinn-proto = { path = "vendor/quinn-proto" }
